code/networkpolicies/allow-ingress-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-backend
  namespace: grade-submission

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: student-grade-api

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
         kubernetes.io/metadata.name: ingress-nginx

    ports:
    - protocol: TCP
      port: 5000
